# vision_core

./: CMakeLists.txt  CUDAException.hpp  CUDAGenerics.hpp  CUDATypes.hpp  EigenSerializers.hpp  LICENSE  LaunchUtils.hpp  MemoryPolicy.hpp  MemoryPolicyCUDA.hpp  MemoryPolicyHost.hpp  MemoryPolicyOpenCL.hpp  Platform.hpp  README.md  SophusInterpolations.hpp  VisionCoreConfig.cmake.in
buffers/: Buffer1D.hpp  Buffer2D.hpp  Buffer3D.hpp  BufferPyramid.hpp  CUDATexture.hpp  GPUVariable.hpp  Image2D.hpp  ImagePyramid.hpp  PyramidBase.hpp  ReductionSum2D.hpp  Reductions.hpp  Volume.hpp
buffers/tests/: CMakeLists.txt  UT_Buffer1D.cpp  UT_Buffer2D.cpp  UT_Buffer3D.cpp  UT_CUDABuffer1D.cpp  UT_CUDABuffer1D.cu  UT_CUDABuffer2D.cpp  UT_CUDABuffer2D.cu  UT_CUDABuffer3D.cpp  UT_CUDAPyramid.cpp  UT_CUDAReduction2D.cpp  UT_CUDAReduction2D.cu  UT_CUDAReductions.cpp  UT_OpenCLBuffer1D.cpp  UT_OpenCLBuffer2D.cpp  UT_OpenCLBuffer3D.cpp  UT_OpenCLImage2D.cpp  UT_OpenCLPyramid.cpp  UT_Pyramid.cpp  UT_Reduction2D.cpp
control/: PID.hpp  VelocityProfile.hpp
control/tests/: CMakeLists.txt  UT_PID.cpp  UT_VelocityProfile.cpp
image/: BufferOps.hpp  ColorMap.hpp  ConnectedComponents.hpp  Convolution.hpp  Filters.hpp  Fourier.hpp  ImagePatch.hpp  PixelConvert.hpp
image/kernels/: BufferOpsGPU.cpp  BufferOpsGPU.cu  ColorMapGPU.cpp  ColorMapGPU.cu  ConvolutionGPU.cpp  ConvolutionGPU.cu  FiltersGPU.cpp  FiltersGPU.cu  FourierGPU.cpp  FourierGPU.cu  PixelConvertGPU.cpp  PixelConvertGPU.cu
image/sources/: BufferOpsCPU.cpp  ColorMapCPU.cpp  ColorMapDefs.hpp  ConnectedComponents.cpp  ConvolutionCPU.cpp  FiltersCPU.cpp  FourierCPU.cpp  JoinSplitHelpers.hpp  PixelConvertCPU.cpp
image/tests/: CMakeLists.txt  UT_ImagePatch.cpp
include/VisionCore/: CUDAException.hpp  CUDAGenerics.hpp  CUDATypes.hpp  EigenMissingBits.hpp  EigenSerializers.hpp  HelpersEigen.hpp  HelpersMisc.hpp  HelpersSophus.hpp  MemoryPolicy.hpp  Platform.hpp  SophusInterpolations.hpp
include/VisionCore/Buffers/: Buffer1D.hpp  Buffer2D.hpp  Buffer3D.hpp  Image2D.hpp  Reductions.hpp
include/VisionCore/Image/: PixelConvert.hpp
include/VisionCore/Math/: Angles.hpp  Convolution.hpp  Fourier.hpp  LiangBarsky.hpp  LocalParamSE3.hpp  PolarSpherical.hpp  Statistics.hpp
include/VisionCore/Types/: Rectangle.hpp  SquareUpperTriangularMatrix.hpp
include/VisionCore/WrapGL/: WrapGL.hpp  WrapGLBuffer.hpp  WrapGLCommon.hpp  WrapGLFramebuffer.hpp  WrapGLProgram.hpp  WrapGLQuery.hpp  WrapGLSampler.hpp  WrapGLShader.hpp  WrapGLTexture.hpp  WrapGLTransformFeedback.hpp  WrapGLVertexArrayObject.hpp
include/VisionCore/WrapGL/impl/: WrapGLBuffer_impl.hpp  WrapGLFramebuffer_impl.hpp  WrapGLPixelProcessor_impl.hpp  WrapGLProgram_impl.hpp  WrapGLQuery_impl.hpp  WrapGLSampler_impl.hpp  WrapGLShader_impl.hpp  WrapGLTexture_impl.hpp  WrapGLTransformFeedback_impl.hpp  WrapGLVertexArrayObject_impl.hpp  WrapGLVertexProcessor_impl.hpp
io/: ImageIO.hpp  PLYModel.hpp
io/sources/: ImageIO.cpp  ImageUtilsCPU.cpp  PLYModel.cpp  SaveBuffer.cpp
io/tests/: CMakeLists.txt  UT_PLYModel.cpp
math/: Angles.hpp  Convolution.hpp  DenavitHartenberg.hpp  Divergence.hpp  Fitting.hpp  Fourier.hpp  HammingDistance.hpp  Kalman.hpp  LeastSquares.hpp  LiangBarsky.hpp  LocalParamSE3.hpp  LossFunctions.hpp  PolarSpherical.hpp  RANSAC.hpp  Random.hpp  Statistics.hpp
math/kernels/: ConvolutionGPU.cpp  ConvolutionGPU.cu  FourierGPU.cpp  FourierGPU.cu
math/sources/: ConvolutionCPU.cpp  FourierCPU.cpp  Random.cpp
math/tests/: CMakeLists.txt  UT_CordSystems.cpp  UT_DenavitHartenberg.cpp  UT_Divergence.cpp  UT_Fitting.cpp  UT_HammingDistance.cpp  UT_LeastSquares.cpp  UT_LiangBarsky.cpp  UT_LocalParamSE3.cpp  UT_LossFunctions.cpp  UT_PolarSpherical.cpp  UT_RANSAC.cpp  UT_Random.cpp  UT_Statistics.cpp
sources/: VisionCore.cpp
sources/IO/: ImageIO.cpp  ImageUtilsCPU.cpp  SaveBuffer.cpp
sources/Image/: BufferOpsCPU.cpp  BufferOpsGPU.cu  ColorMapGPU.cu  FiltersGPU.cu  PixelConvertGPU.cu
sources/Math/: ConvolutionCPU.cpp  ConvolutionGPU.cpp  ConvolutionGPU.cu  FourierCPU.cpp  FourierGPU.cpp  FourierGPU.cu
sources/WrapGL/: WrapGLCommon.cpp  context_windowless.cpp
tests/: CMakeLists.txt  EigenConfigCPU.cpp  EigenConfigCUDA.cpp  GetEigenConfig.hpp  UT_EigenConfig.cpp  UT_OpenCL.cpp  UT_Platform.cpp
tests/Buffers/: CMakeLists.txt  UT_Buffer1D.cpp  UT_Buffer2D.cpp  UT_CUDABuffer1D.cpp  UT_CUDABuffer2D.cpp
tests/Control/: CMakeLists.txt
tests/IO/: CMakeLists.txt
tests/Image/: CMakeLists.txt
tests/Math/: CMakeLists.txt
tests/Types/: CMakeLists.txt
tests/WrapGL/: CMakeLists.txt  UT_GLBinding.cpp
types/: AxisAlignedBoundingBox.hpp  CostVolumeElement.hpp  Endian.hpp  Gaussian.hpp  Hypersphere.hpp  Polynomial.hpp  Rectangle.hpp  SDF.hpp  SquareUpperTriangularMatrix.hpp
types/tests/: CMakeLists.txt  UT_AxisAlignedBoundingBox.cpp  UT_CostVolumeElement.cpp  UT_Endian.cpp  UT_Gaussian.cpp  UT_Hypersphere.cpp  UT_Polynomial.cpp  UT_Rectangle.cpp  UT_SDF.cpp  UT_SquareUpperTriangularMatrix.cpp
wrapgl/: WrapGL.hpp  WrapGLBuffer.hpp  WrapGLCommon.hpp  WrapGLContext.hpp  WrapGLFramebuffer.hpp  WrapGLQuery.hpp  WrapGLSampler.hpp  WrapGLShader.hpp  WrapGLTexture.hpp  WrapGLTransformFeedback.hpp  WrapGLVertexArrayObject.hpp
wrapgl/sources/: WrapGLBuffer.cpp  WrapGLCommon.cpp  WrapGLFramebuffer.cpp  context_glut.cpp  context_windowless.cpp  context_x11.cpp
wrapgl/tests/: CMakeLists.txt  UT_GLBinding.cpp  tests_main.cpp
